# ome-zarr-rfc3-data

./: README.md  main.py  pyproject.toml
data/: .gitignore
